--- a/exceltest.ipynb
+++ b/exceltest.ipynb
@@ -29,8 +29,22 @@
       "<class 'pandas.core.indexes.base.Index'>\n",
       "['種類', '円', '冊']\n",
       "種類\n",
-      "1\n",
-      "900\n"
+      "0    1\n",
+      "1    1\n",
+      "2    2\n",
+      "3    2\n",
+      "4    2\n",
+      "Name: 種類, dtype: int64\n",
+      "0    1000\n",
+      "1     900\n",
+      "2     500\n",
+      "3     600\n",
+      "4     700\n",
+      "Name: 円, dtype: int64\n",
+      "種\n",
+      "類\n",
+      "円\n",
+      "冊\n"
      ]
     }
    ],
@@ -49,8 +63,12 @@
     "\n",
     "df = pd.DataFrame(df)\n",
     "\n",
-    "print(df['種類'][1])\n",
-    "print(df['円'][1])"
+    "print(df['種類'])\n",
+    "print(df['円'])\n",
+    "\n",
+    "for column in df:\n",
+    "    for index in column:\n",
+    "        print(index)"
    ]
   },
   {
